objects/Research_Campaign__c.object
<CustomObject>
    <description>It consists of the campaigns type of mindcrowd like Covid, DBS, Bean game</description>
    <fields>
        <fullName>Usps_Service_Type__c</fullName>
        <description>service which the Mindcrowd team uses TO send their parcels through USPS</description>
        <label>Usps Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FIRST CLASS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight_in_Ounces__c</fullName>
        <description>It consists of weight of each campaign type</description>
        <label>Weight in Ounces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isReturnLabelNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It tells whether the campaign requires return label or not</description>
        <label>isReturnLabelNeeded</label>
        <type>Checkbox</type>
    </fields>
    <label>Research Campaign</label>
    <nameField>
        <label>Research Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Research Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>